Students overview: table with loading, details of each student and filter

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* @import url('/src/modules/auth/Auth.css'); */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,9 +18,10 @@ html,body{
    /*  position: relative; */
 }
 /* ANT-TAILWIND BUTTON BUG */
-.prmAntB button{
+.prmAntB .ant-btn-primary{
   background-color: #243763;
 }
+
 
 
 /* AUTH LABELS---------------------------*/
@@ -44,13 +44,19 @@ html,body{
 }
 /* ---------------------------------- */
 
-.menuDropDown-open{
-  transition: height 0.3s ease, visibility  ;
-
-}
-.menuDropDown-closed{
-
+.addUser-Svg:hover path{
+  fill: rgba(36, 55, 99,0.7);
 }
 
+
+/* ANT TABLE STYLES */
+.ant-table-thead .ant-table-cell{
+  background-color: rgb(239, 246, 255) !important;
+  color:#243763 !important;
+}
+/* .ant-table-tbody, .ant-table-thead{
+  font-size: 14px ;
+} */
+/* ------------------------------- */
 
 
